Project WCTraining {
  database_type: 'PostgreSQL'
  Note: '''
    # WC Training Database
  '''
}

Table AdminUser as AU {
  id int [pk, increment] // auto-increment
  first_name string [not null]
  last_name string [not null]
  email string [not null, unique]
  password string [not null]
  created_at timestamp
  updated_at timestamp
  Indexes {
    (id) [pk]
  }
}

Table User as U {
  id int [pk, increment] // auto-increment
  first_name string
  last_name string
  // user_name string
  // gravatar image
  email string [not null, unique]
  password string [not null]
  created_at timestamp
  updated_at timestamp
  Indexes {
    (id) [pk]
  }
}

// Enums for 'Workout' below
Enum weekdays {
  sunday
  monday
  tuesday
  wednesday
  thursday
  friday
  saturday
}

// has many workout sets
Table Workout as W {
  id int [pk, increment] // auto-increment
  week_num integer
  day_num weekdays // 0-6 Sun - Sat
  created_at timestamp
  updated_at timestamp
  Indexes {
    (id) [pk]
  }
}

Table UserWorkout as UW {
  id int [pk, increment] // auto-increment
  user_id int [ref: > U.id]
  workout_id int [ref: > W.id]
  complete boolean [default: false]
  date DateTime // can help with calculating which workout to show next
  notes text // can include how felt, etc.
  created_at timestamp
  updated_at timestamp
  Indexes {
    (id, user_id, workout_id) [pk]
  }
}

// Enums for 'Drill' below
Enum drill_types {
  conditioning
  lifting
}


Enum run_types {
  timed_run // or for_distance
  hundreds_on_the_minute
  speed_training_yards
  yard_sets // 25
  distanced_run // or for_time
}

Enum lift_types {
  arms
  back
  legs
  abs
  chest
  total_body
}

Enum distance_units {
  yards
  miles
}

Enum rep_rest_time_units {
  seconds
  minutes
}

Table Drill as D {
  id int [pk, increment] // auto-increment
  name varchar
  drill_type drill_types
  num_reps integer
  run_type run_types
  lift_type lift_types
  distance integer // how to do the suicide set?
  distance_unit distance_units
  resistance_exercise string
  rep_rest_time integer // seconds
  rest_time_unit rep_rest_time_units [default: 0] // enum to convert
  time_goal integer // minutes # can always convert
  description text
  created_at timestamp
  updated_at timestamp
  Indexes {
    (id) [pk]
  }
}

Table UserWorkoutDrill as UE {
  id int [pk, increment] // auto-increment
  drill_id int [ref: > D.id]
  user_workout_id int [ref: > UW.id]
  // complete boolean [default: false] // this may or may not make sense here
  notes text // can include weight value, time, modified, etc
  created_at timestamp
  updated_at timestamp
  Indexes {
    (id, drill_id, user_workout_id) [pk]
  }
}

Enum circuit_types {
    conditioning
    lifting
    hybrid
  }

Table WorkoutDrill as WD {
  id int [pk, increment] // auto-increment
  drill_id int [ref: > D.id]
  workout_id int [ref: > UW.id]
  circuit_number integer
  order_in_circuit integer
  between_circuits boolean
  // circuit_type circuit_types
  circuit_name string // not most ideal here...
  created_at timestamp
  updated_at timestamp
  Indexes {
    (id, drill_id, workout_id) [pk]
  }
}

